                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 08-05-2005 fixed: paplayer resets the audiodevice if the format changes (eg samplerate/channels etc.)
  - 08-05-2005 removed: Code in playlist view formatting that added the number in the playlist to the track name (screwed up charset of filenames over smb.)
  - 08-05-2005 fixed: potential divide by zero errors and framerate might be somewhat off after a discontinuity
  - 08-05-2005 fixed: UTF8 tags in APEv2 showed wrong characters.
  - 08-05-2005 changed: Don't list .cue sheets with more than one source file.
  - 08-05-2005 added: SF patch [1197478] Fix for bug #1192620 - thanks to Devin Cook
  - 08-05-2005 added: Shorten (.shn) support to paplayer.
  - 07-05-2005 changed: Rewrote the threaded filereader class - now just uses a single ringbuffer technique.
  - 07-05-2005 updated: Italian language file (Thnx to kotix)
  - 07-05-2005 updated: Norwegian language file (Thnx to vnm)
  - 07-05-2005 fixed: m3u's with album and artist info (#EXTART and #EXTALB) loads them as songs
  - 07-05-2005 changed: cdda track filenames start at 1 instead of 0
  - 07-05-2005 fixed: wrong vorbisfile.dll in repository
  - 07-05-2005 changed: nav sounds respect volume settings
  - 07-05-2005 added: SF patch [1196982] make sidplayer respect volume at start - thanks to spiff
  - 07-05-2005 added: Threaded FileReader class to mp3 codec (paplayer) to allow file readahead caching.
  - 07-05-2005 fixed: keymap.xml had wrong id's for Library and Top 100 views which did not allow to queue up songs or switch to playlist menu.
  - 06-05-2005 fixed: Analog buttons sticking with new action system and updated keymap.xml for visualisation window.