@@ -364,6 +364,7 @@ CGUISettings::CGUISettings(void)
   AddInt(8, "MyVideos.Brightness", 13378, 50, 0, 1, 100, SPIN_CONTROL_INT);
   AddInt(9, "MyVideos.Contrast", 13379, 50, 0, 1, 100, SPIN_CONTROL_INT);
   AddInt(10, "MyVideos.Gamma", 13380, 20, 0, 1, 100, SPIN_CONTROL_INT);
+  AddBool(11, "MyVideos.UseTimeBasedSeeking", 13386, false);
 
   AddCategory(5, "VideoLists", 14018);
   AddBool(1, "VideoLists.HideParentDirItems", 13306, true);
